[package]
name = "utmp"
version = "0.0.2"
authors = ["Jihyeok Seo <me@limeburst.net>"]
description = "utmp(x) file parser."
homepage = "https://github.com/limeburst/utmp-rust"
repository = "https://github.com/limeburst/utmp-rust"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
time = "*"
